--- a/EasyEats/src/main/Frontend/EasyEats/src/app/header/header.component.html
+++ b/EasyEats/src/main/Frontend/EasyEats/src/app/header/header.component.html
@@ -1,1 +1,9 @@
-<p>header works!</p>
+<div class="header">
+  <div class="left-corner">
+    <img ngSrc="../../assets/images/logo.png" height="100" width="200">
+  </div>
+  <div class="right-corner">
+    <button>Log in</button>
+    <button>Sign up</button>
+  </div>
+</div>
