--- a/EasyEats/src/main/Frontend/EasyEats/src/app/welcome-screen/welcome-screen.component.html
+++ b/EasyEats/src/main/Frontend/EasyEats/src/app/welcome-screen/welcome-screen.component.html
@@ -1,1 +1,13 @@
-<p>welcome-screen works!</p>
+<app-header></app-header>
+
+<body>
+<div class="background">
+  <img src="../../assets/images/background.jpg">
+</div>
+<main>
+  <div class="phrase">
+    The only cooking app you will ever need!
+  </div>
+  <button class="sign-up">Start cooking now!</button>
+</main>
+</body>
