--- a/EasyEats/src/main/Frontend/EasyEats/src/app/welcome-screen/welcome-screen.component.html
+++ b/EasyEats/src/main/Frontend/EasyEats/src/app/welcome-screen/welcome-screen.component.html
@@ -8,6 +8,6 @@
   <div class="phrase">
     The only cooking app you will ever need!
   </div>
-  <button class="sign-up">Start cooking now!</button>
+  <button class="sign-up" (click)="redirectToSignUp()">Start cooking now!</button>
 </main>
 </body>
