--- a/EasyEats/src/main/Frontend/EasyEats/src/app/header/header.component.html
+++ b/EasyEats/src/main/Frontend/EasyEats/src/app/header/header.component.html
@@ -5,6 +5,6 @@
     </a>
   </div>
   <div class="right-corner">
-    <button>Log in</button>
+    <button (click)="redirectToLogIn()">Log in</button>
   </div>
 </div>
