Refactoring sign up

--- a/EasyEats/src/main/Frontend/EasyEats/src/app/components/welcome-screen/welcome-screen.component.html
+++ b/EasyEats/src/main/Frontend/EasyEats/src/app/components/welcome-screen/welcome-screen.component.html
@@ -1,5 +1,7 @@
 <app-header></app-header>
-
+<head>
+  <title>EasyEats</title>
+</head>
 <body>
 <div class="background">
   <img src="../../assets/images/background.jpg">
