--- a/EasyEats/src/main/Frontend/EasyEats/src/app/login/login.component.html
+++ b/EasyEats/src/main/Frontend/EasyEats/src/app/login/login.component.html
@@ -1,1 +1,19 @@
-<p>login works!</p>
+<div>
+  <h2>Login</h2>
+  <form (ngSubmit)="onSubmit()">
+    <div>
+      <label for="username">Username:</label>
+      <input type="text" id="username" [(ngModel)]="username" name="username" required>
+    </div>
+    <div>
+      <label for="password">Password:</label>
+      <input type="password" id="password" [(ngModel)]="password" name="password" required>
+    </div>
+
+    <div *ngIf="errorMessage" class="error-message">{{ errorMessage }}</div>
+
+    <button type="submit">Login</button>
+  </form>
+</div>
+
+
