--- a/EasyEats/src/main/Frontend/EasyEats/src/app/components/signup/signup.component.css
+++ b/EasyEats/src/main/Frontend/EasyEats/src/app/components/signup/signup.component.css
@@ -1,38 +1,84 @@
 main {
   background-color: antiquewhite;
-  display: flex;
-  justify-content: space-around;
-  margin: 80px 50px;
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  align-items: center;
+  height: 80vh;
+  margin: 40px;
+  padding: 10px;
   border-radius: 20px;
 }
 
+img {
+  padding-left: 35px;
+}
+
 .right-corner {
-  margin-top: 50px;
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-rows: 1fr 3fr;
+  justify-items: center;
 }
 
 .phrase {
-  font-size: 35px;
+  font-size: 40px;
   font-weight: bold;
-  color: #215c44;
-  margin-bottom: 50px;
+  color: var(--green-color);
+  margin-bottom: 30px;
+}
+
+.signup-form {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
 }
 
 label {
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-end;
   line-height: 25px;
   margin-bottom: 10px;
+  font-size: 18px;
 }
 
 input {
-  flex: 0 0 200px;
+  flex: 0 0 100px;
+  padding: 5px;
   margin-left: 10px;
+  border:2px solid var(--green-color);
+  border-radius: 5px;
+}
+
+input:focus {
+  color: var(--green-color);
+  font-weight: bold;
+  outline-color: #e28743;
 }
 
 button {
-  margin: 50px;
+  margin-top: 25px;
+  margin-bottom: 10px;
+  width: 150px;
+  height: 40px;
+  font-size: 20px;
+  border: 2px solid var(--white);
+  border-radius: 5px;
+  background-color: var(--green-color);
+  color: var(--white);
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.3);
+  transition: transform 300ms ease-in-out;
 }
 
+button:hover {
+  cursor: pointer;
+  transform: scale(1.1);
+}
+
+.error-message {
+  color: var(--red-color);
+  font-weight: bold;
+  padding-top: 5px;
+}
+
+a {
+  text-decoration: none;
+  color: var(--green-color);
+  font-weight: bold;
+}
