--- a/EasyEats/src/main/Frontend/EasyEats/src/styles.css
+++ b/EasyEats/src/main/Frontend/EasyEats/src/styles.css
@@ -3,4 +3,7 @@
 * {
   font-family: 'Playfair Display', serif;
   margin: 0;
+  --red-color: #c62a2a;
+  --white: #FFF3E2;
+  --green-color: #215c44;
 }
