--- a/EasyEats/src/main/Frontend/EasyEats/src/app/components/signup/signup.component.css
+++ b/EasyEats/src/main/Frontend/EasyEats/src/app/components/signup/signup.component.css
@@ -15,7 +15,7 @@ img {
 
 .right-corner {
   display: grid;
-  grid-template-rows: 1fr 3fr;
+  grid-template-rows: 0fr 2fr 0fr;
   justify-items: center;
 }
 
@@ -23,7 +23,7 @@ img {
   font-size: 40px;
   font-weight: bold;
   color: var(--green-color);
-  margin-bottom: 30px;
+  margin-bottom: 15px;
 }
 
 .signup-form {
