--- a/EasyEats/src/main/Frontend/EasyEats/src/app/components/home-screen/home-screen.component.html
+++ b/EasyEats/src/main/Frontend/EasyEats/src/app/components/home-screen/home-screen.component.html
@@ -1,17 +1,12 @@
-<div class="container">
-    <div class="header">
-        <h1>Popular categories</h1>
+<app-main-header></app-main-header>
+<main>
+  <span class="title">Categories</span>
+  <div class="card-container">
+    <div *ngFor="let category of categories" class="card">
+      <img src="{{category.image}}"/>
+      <div class="category-details">
+        <span class="category-description">{{category.description}}</span>
+      </div>
     </div>
-    <div class="row row-cols-3">
-        <div class="col" *ngFor="let category of categories" class="col">
-        <div class="card">
-            <a href="#">
-                <img src="{{category.image}}" class="card-img-top" alt="image">
-                <div class="card-body">
-                    <p class="card-text">{{category.description}}</p>
-                </div>
-            </a>
-          </div> 
-        </div>         
-    </div>
-</div>
+  </div>
+</main>
