--- a/EasyEats/src/main/Frontend/EasyEats/src/app/components/signup/signup.component.css
+++ b/EasyEats/src/main/Frontend/EasyEats/src/app/components/signup/signup.component.css
@@ -55,6 +55,7 @@ input:focus {
 button {
   margin-top: 25px;
   margin-bottom: 10px;
+  margin-right: 40px;
   width: 150px;
   height: 40px;
   font-size: 20px;
