--- a/EasyEats/src/main/Frontend/EasyEats/src/styles.css
+++ b/EasyEats/src/main/Frontend/EasyEats/src/styles.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
 
 * {
   font-family: 'Playfair Display', serif;
