--- a/EasyEats/src/main/Frontend/EasyEats/src/app/components/main-header/main-header.component.css
+++ b/EasyEats/src/main/Frontend/EasyEats/src/app/components/main-header/main-header.component.css
@@ -19,6 +19,10 @@ a {
   color: black;
 }
 
+a:hover{
+  color: var(--red-color);
+}
+
 .right-corner {
   display: flex;
   align-items: center;
@@ -27,23 +31,8 @@ a {
 }
 
 button {
-  height: 3em;
-  width: 5em;
-  font-size: 15px;
-  border-radius: 5px;
-  border: 2px solid var(--red-color);
-  background-color: var(--white);
-  color: var(--red-color);
-  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.3);
-  transition: transform 300ms ease-in-out;
-}
-
-button:hover {
-  cursor: pointer;
-  transform: scale(1.1);
-  border: 2px solid var(--white);
-  background-color: var(--red-color);
-  color: var(--white);
+  border: none;
+  background-color: transparent;
 }
 
 
