--- a/EasyEats/src/main/Frontend/EasyEats/src/app/components/home-screen/home-screen.component.html
+++ b/EasyEats/src/main/Frontend/EasyEats/src/app/components/home-screen/home-screen.component.html
@@ -1,12 +1,15 @@
 <app-main-header></app-main-header>
 <main>
   <span class="title">Categories</span>
-  <div class="card-container">
-    <div *ngFor="let category of categories" class="card">
-      <img src="{{category.image}}"/>
-      <div class="category-details">
-        <span class="category-description">{{category.description}}</span>
+  
+    <div class="card-container">
+      <div *ngFor="let category of categories" class="card">
+        <a [routerLink]="['/recipes', category.id]"> -->
+          <img src="{{category.image}}"/>
+          <div class="category-details">
+            <span class="category-description">{{category.description}}</span>
+          </div>
+        </a>
       </div>
     </div>
-  </div>
 </main>
