--- a/EasyEats/src/main/Frontend/EasyEats/src/app/components/single-category/single-category.component.html
+++ b/EasyEats/src/main/Frontend/EasyEats/src/app/components/single-category/single-category.component.html
@@ -1,3 +1,6 @@
+<div *ngFor="let subCategory of category?.sub_categories">
+    <button (click)="onClickOfSubCategory(subCategory.id)">{{subCategory.name}}</button>
+</div>
 <div *ngFor="let recipe of recipes">
     <h1>{{recipe.title}}</h1>
 </div>
