--- a/EasyEats/src/main/Frontend/EasyEats/src/app/components/main-header/main-header.component.html
+++ b/EasyEats/src/main/Frontend/EasyEats/src/app/components/main-header/main-header.component.html
@@ -11,10 +11,9 @@
     <div class="links">
       <a routerLink="/welcome">Homepage</a>
       <a routerLink="/home">Categories</a>
-      <a>Recipes</a>
+      <a routerLink="/recipes">Recipes</a>
     </div>
     <div class="right-corner">
-      <i class="fa-solid fa-magnifying-glass"></i>
       <button (click)="onLogOut()"><i class="fa-solid fa-right-from-bracket" title="Logout"></i></button>
     </div>
   </div>
