--- a/EasyEats/src/main/Frontend/EasyEats/src/app/components/home-screen/home-screen.component.css
+++ b/EasyEats/src/main/Frontend/EasyEats/src/app/components/home-screen/home-screen.component.css
@@ -1,11 +1,11 @@
 main {
-  margin: 30px;
+  margin-left: 50px;
+  margin-right: 50px;
 }
 
 .title {
-  font-size: 60px;
+  font-size: 50px;
   color: var(--red-color);
-  text-shadow: 2px 2px #000000;
   font-family: 'Pacifico', cursive;
   margin-left: 80px;
 }
