--- a/EasyEats/src/main/Frontend/EasyEats/src/app/components/main-header/main-header.component.css
+++ b/EasyEats/src/main/Frontend/EasyEats/src/app/components/main-header/main-header.component.css
@@ -16,7 +16,8 @@
 a {
   text-decoration: none;
   font-size: 23px;
-  color: black;
+  color: var(--green-color);
+  font-family: 'Righteous', cursive;
 }
 
 a:hover{
@@ -33,6 +34,10 @@ a:hover{
 button {
   border: none;
   background-color: transparent;
+}
+
+i {
+  color: var(--green-color);
 }
 
 
