Recipe details endpoint

--- a/EasyEats/src/main/Frontend/EasyEats/src/app/components/single-category/single-category.component.css
+++ b/EasyEats/src/main/Frontend/EasyEats/src/app/components/single-category/single-category.component.css
@@ -27,7 +27,7 @@ main {
   border: 1px solid #B70404;
 }
 
-.card > img {
+img {
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
   width: 200px;
