--- a/EasyEats/src/main/Frontend/EasyEats/src/app/components/all-recipes/all-recipes.component.css
+++ b/EasyEats/src/main/Frontend/EasyEats/src/app/components/all-recipes/all-recipes.component.css
@@ -54,7 +54,7 @@ input:focus {
   border: 1px solid #B70404;
 }
 
-.card > img {
+img {
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
   width: 200px;
