--- a/EasyEats/src/main/Frontend/EasyEats/src/app/components/recipe/recipe.component.html
+++ b/EasyEats/src/main/Frontend/EasyEats/src/app/components/recipe/recipe.component.html
@@ -1,30 +1,23 @@
-<!--<app-main-header></app-main-header>-->
+<app-main-header></app-main-header>
 
-<!--<main>-->
-<!--  &lt;!&ndash;  <span class="title">Subcategories</span>&ndash;&gt;-->
-<!--  <div class="subcategories">-->
-<!--    <div *ngFor="let subCategory of category?.sub_categories">-->
-<!--      <button (click)="onClickOfSubCategory(subCategory.id)">{{subCategory.name}}</button>-->
-<!--    </div>-->
-<!--  </div>-->
-<!--  <div class="recipe">-->
-<!--    <div *ngFor="let recipe of recipes">-->
-<!--      <div class="recipe-info">-->
-<!--        <h1 class="recipe-title">{{recipe.title}}</h1>-->
-<!--        <img ngSrc="{{recipe.image}}" width="300" height="400">-->
-<!--      </div>-->
-<!--      <div class="recipe-details">-->
-<!--        <div class="ingredients">-->
-<!--          <span>Ingredients:</span>-->
-<!--          <ul *ngFor="let ingredient of recipe.ingredients">-->
-<!--            <li>{{ingredient.quantity}}{{ingredient.measurementUnit}} {{ingredient.name}}</li>-->
-<!--          </ul>-->
-<!--        </div>-->
-<!--        <div class="steps">-->
-<!--          <span>How to make it:</span>-->
-<!--          <div>{{recipe.description}}</div>-->
-<!--        </div>-->
-<!--      </div>-->
-<!--    </div>-->
-<!--  </div>-->
-<!--</main>-->
+<main>
+  <div *ngIf="recipe" class="recipe">
+      <div class="recipe-info">
+        <h1 class="recipe-title">{{recipe.title}}</h1>
+        <img ngSrc="{{recipe.image}}" width="300" height="400">
+      </div>
+      <div class="recipe-details">
+        <div class="ingredients">
+          <span>Ingredients:</span>
+          <ul *ngFor="let ingredient of recipe.ingredients">
+            <li>{{ingredient.quantity}}{{ingredient.measurementUnit}} {{ingredient.name}}</li>
+          </ul>
+        </div>
+        <div class="steps">
+          <span>How to make it:</span>
+          <div>{{recipe.description}}</div>
+        </div>
+      </div>
+    </div>
+</main>
+
