--- a/EasyEats/src/main/Frontend/EasyEats/src/app/components/main-header/main-header.component.css
+++ b/EasyEats/src/main/Frontend/EasyEats/src/app/components/main-header/main-header.component.css
@@ -31,9 +31,23 @@ a:hover{
   margin-right: 2em;
 }
 
-button {
-  border: none;
-  background-color: transparent;
+button{
+  margin-top: 25px;
+  margin-bottom: 10px;
+  width: 150px;
+  height: 40px;
+  font-size: 20px;
+  border: 2px solid var(--white);
+  border-radius: 5px;
+  background-color: var(--red-color);
+  color: var(--white);
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.3);
+  transition: transform 300ms ease-in-out;
+}
+
+button:hover {
+  cursor: pointer;
+  transform: scale(1.1);
 }
 
 i {
