changes in adding recipes

--- a/EasyEats/src/main/Frontend/EasyEats/src/app/components/add-recipe/add-recipe.component.html
+++ b/EasyEats/src/main/Frontend/EasyEats/src/app/components/add-recipe/add-recipe.component.html
@@ -46,5 +46,7 @@
       <button (click)="onAddIngredient()">Add ingredient</button>
     </label><br>
 
+    <div *ngIf="errorMessage.length">{{errorMessage}}</div>
+
     <button (click)="onAddRecipe()">Add recipe</button>
 </form>
