--- a/EasyEats/src/main/Frontend/EasyEats/src/app/components/main-header/main-header.component.html
+++ b/EasyEats/src/main/Frontend/EasyEats/src/app/components/main-header/main-header.component.html
@@ -1,6 +1,3 @@
-<head>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-</head>
 <main>
   <div class="header">
     <div class="left-corner">
@@ -13,14 +10,14 @@
       <a routerLink="/home">Categories</a>
       <a routerLink="/recipes">Recipes</a>
     </div>
-
     <div class="right-corner" *ngIf="isLoggedIn">
-      <a [routerLink]="['/user-profile', user?.username]">{{ user?.username }}</a>
-      <button (click)="logout()">Logout</button>
+      <div>
+        Welcome back, <a [routerLink]="['/user-profile', user?.username]" class="username">{{ user?.username }}</a>
+      </div>
+      <button (click)="logout()">Log out</button>
     </div>
-
     <div class="right-corner" *ngIf="!isLoggedIn">
-      <a routerLink="/login">Login</a>
+      <button class="log-in-btn"><a routerLink="/login">Log in</a></button>
     </div>
   </div>
 </main>
