--- a/EasyEats/src/main/Frontend/EasyEats/src/app/components/recipe/recipe.component.css
+++ b/EasyEats/src/main/Frontend/EasyEats/src/app/components/recipe/recipe.component.css
@@ -71,3 +71,54 @@ ul>li::before {
   padding-left: 25px;
 }
 
+.add-review {
+  display: flex;
+  flex-direction: column;
+  justify-items: center;
+  margin-left: 150px;
+}
+
+.form {
+  display: flex;
+  width: 30%;
+  flex-direction: column;
+  align-items: flex-end;
+  margin-top: 10px;
+  margin-bottom: 25px;
+}
+
+label {
+  line-height: 25px;
+  margin-bottom: 10px;
+  font-size: 18px;
+}
+
+input {
+  flex: 0 0 100px;
+  padding: 3px;
+  border:2px solid var(--green-color);
+  border-radius: 5px;
+}
+
+input:focus {
+  color: var(--green-color);
+  font-weight: bold;
+  outline-color: var(--red-color);
+}
+
+button{
+  width: 75px;
+  font-size: 18px;
+  border: 2px solid var(--white);
+  border-radius: 5px;
+  background-color: var(--red-color);
+  color: var(--white);
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.3);
+  transition: transform 300ms ease-in-out;
+}
+
+button:hover {
+  cursor: pointer;
+  transform: scale(1.1);
+}
+
