changes in adding recipes

--- a/EasyEats/src/main/Frontend/EasyEats/src/app/components/add-recipe/add-recipe.component.html
+++ b/EasyEats/src/main/Frontend/EasyEats/src/app/components/add-recipe/add-recipe.component.html
@@ -4,8 +4,8 @@
       <input placeholder="Title" required [(ngModel)]="title" name="title">
     </label><br>
     <label>
-      Description:
-      <input placeholder="Description" required [(ngModel)]="description" name="description" aria-required="true">
+      Instructions how to make it:
+      <textarea required [(ngModel)]="description" name="description" aria-required="true"></textarea>
     </label><br>
     <label>
       Image:
