--- a/EasyEats/src/main/Frontend/EasyEats/src/app/components/user-profile/user-profile.component.css
+++ b/EasyEats/src/main/Frontend/EasyEats/src/app/components/user-profile/user-profile.component.css
@@ -56,7 +56,7 @@
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.3);
   transition: transform 300ms ease-in-out;
   margin-top: 170px;
-  margin-left: -400px;
+  margin-left: -200px;
   text-align: center;
 }
 
@@ -142,6 +142,29 @@ h1 {
 }
 
 .edit-profile button:hover {
+  cursor: pointer;
+  transform: scale(1.1);
+  border: 2px solid var(--white);
+  background-color: var(--red-color);
+  color: var(--white);
+}
+
+.profile-info button {
+  width: 400px;
+  height: 40px;
+  font-size: 20px;
+  border-radius: 5px;
+  border: 2px solid var(--red-color);
+  background-color: var(--white);
+  color: var(--red-color);
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.3);
+  transition: transform 300ms ease-in-out;
+  margin-top: -48px;
+  margin-left: 30px;
+  text-align: center;
+}
+
+.profile-info button:hover {
   cursor: pointer;
   transform: scale(1.1);
   border: 2px solid var(--white);
