--- a/EasyEats/src/main/Frontend/EasyEats/src/app/components/user-profile/user-profile.component.html
+++ b/EasyEats/src/main/Frontend/EasyEats/src/app/components/user-profile/user-profile.component.html
@@ -31,6 +31,7 @@
         </div>
       </div>
       <button (click)="toggleEdit()" id="button">Edit your profile</button>
+      <button id="posts">View your posts</button>
     </div>
 
 
