--- a/EasyEats/src/main/Frontend/EasyEats/src/app/components/user-profile/user-profile.component.html
+++ b/EasyEats/src/main/Frontend/EasyEats/src/app/components/user-profile/user-profile.component.html
@@ -30,8 +30,11 @@
           </div>
         </div>
       </div>
-      <button (click)="toggleEdit()" id="button">Edit your profile</button>
-      <button id="posts">View your posts</button>
+
+      <div class="button-container">
+        <button (click)="toggleEdit()" class="profile-info-button">Edit your profile</button>
+        <button id="button">View your posts</button>
+      </div>
     </div>
 
 
