--- a/EasyEats/src/main/Frontend/EasyEats/src/app/components/edit-recipe/edit-recipe.component.html
+++ b/EasyEats/src/main/Frontend/EasyEats/src/app/components/edit-recipe/edit-recipe.component.html
@@ -51,6 +51,6 @@
 
     <div *ngIf="errorMessage.length">{{errorMessage}}</div>
 
-    <button (click)="onEditRecipe()" class="add-recipe-btn">Edit recipe</button>
+    <button (click)="onEditRecipe()" class="add-recipe-btn">Save</button>
   </form>
 </main>
