--- a/EasyEats/src/main/Frontend/EasyEats/src/app/components/user-profile/user-profile.component.html
+++ b/EasyEats/src/main/Frontend/EasyEats/src/app/components/user-profile/user-profile.component.html
@@ -28,6 +28,10 @@
             <label>Email:</label>
             <p>{{ user.email }}</p>
           </div>
+          <div class="profile-item">
+            <label>Profile picture:</label>
+            <img src="{{user.image}}">
+          </div>
         </div>
       </div>
       <button (click)="toggleEdit()" id="button">Edit your profile</button>
